// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogHost Tests Show MRS Schema Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="mrsSchemaDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Schema Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="name"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar dropdown valueEditor"
            id="service"
            style="flex-direction: row; align-items: center;"
            tabindex="0"
          >
            <label
              __self="[object Object]"
              __source="[object Object]"
              class="msg label ellipsis"
              data-tooltip="expand"
            >
              localhost
            </label>
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Request Path
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="requestPath"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Requires Authentication
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="requiresAuth"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Items per Page
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="itemsPerPage"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Enabled
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="enabled"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show MRS Service Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="mrsServiceDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        MySQL REST Service
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Service Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="serviceName"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Comments
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="comments"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Host Name
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="hostName"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Supported Protocols
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label description"
            data-tooltip="expand"
          >
            Supported Protocols
          </label>
        </div>
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 4;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            MRS Service Flags
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox unchecked valueEditor"
            id="makeDefault"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Default
          </label>
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg checkbox checked valueEditor"
            id="enabled"
            tabindex="0"
          >
            <span
              __self="[object Object]"
              __source="[object Object]"
              class="checkMark"
            />
            Enabled
          </label>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Show Prompt Dialog (snapshot) 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
  id="shellPromptDialog"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible valueEditDialog"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-terminal"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Feedback Requested
      </label>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="msg button imageOnly"
        id="closeButton"
        tabindex="0"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg icon"
          style="mask-image: url(close2.svg);"
        />
      </button>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg grid"
        style="grid-template-columns: repeat(8, 1fr); row-gap: 16px; column-gap: 16px;"
      >
        <div
          __self="[object Object]"
          __source="[object Object]"
          class="msg container fixedScrollbar gridCell"
          style="flex-direction: column; justify-content: flex-start; align-items: stretch; grid-column: span 8;"
        >
          <label
            __self="[object Object]"
            __source="[object Object]"
            class="msg label valueTitle"
            data-tooltip="expand"
          >
            Lorem ipsum dolor sit amet
          </label>
          <div
            __self="[object Object]"
            __source="[object Object]"
            class="msg container fixedScrollbar inputWithProgress"
            style="flex-direction: row;"
          >
            <input
              __self="[object Object]"
              __source="[object Object]"
              class="msg input valueEditor"
              id="input"
              spellcheck="true"
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="OK"
          class="msg button"
          id="ok"
          tabindex="0"
        >
          OK
        </button>
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Cancel"
          class="msg button"
          id="cancel"
          tabindex="0"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogHost Tests Standard Rendering (snapshot) 1`] = `
<DialogHost>
  <PasswordDialog
    key="passwordDialog"
  />
  <ValueEditDialog
    key="valueEditDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        Object {
          "begin": Array [],
          "end": Array [
            <Button
              caption="OK"
              disabled={false}
              id="ok"
              onClick={[Function]}
            />,
            <Button
              caption="Cancel"
              id="cancel"
              onClick={[Function]}
            />,
          ],
        }
      }
      caption={
        <y>
          <Icon
            disabled={false}
            src={388}
          />
          <Label />
        </y>
      }
      className="msg valueEditDialog"
      container={Object {}}
      content={
        <Grid
          columnGap={16}
          columns={8}
          rowGap={16}
        />
      }
      id=""
      onClose={[Function]}
    >
      <Portal
        container={Object {}}
        id=""
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
  </ValueEditDialog>
  <ConfirmDialog
    key="confirmDialog"
    onClose={[Function]}
  >
    <Dialog
      actions={
        Object {
          "end": Array [],
        }
      }
      caption={
        <y>
          <Icon
            disabled={false}
            src={275}
          />
          <Label>
            Confirm
          </Label>
        </y>
      }
      className="msg confirmDialog"
      container={Object {}}
      content={
        <Container
          orientation="column"
        >
          
          <Container
            className="description"
            orientation="column"
          />
        </Container>
      }
      onClose={[Function]}
    >
      <Portal
        container={Object {}}
        onClose={[Function]}
        onOpen={[Function]}
      />
    </Dialog>
  </ConfirmDialog>
  <MrsServiceDialog
    key="mrsServiceDialog"
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsServiceDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsServiceDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsServiceDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
    </ValueEditDialog>
  </MrsServiceDialog>
  <MrsSchemaDialog
    onClose={[Function]}
  >
    <ValueEditDialog
      id="mrsSchemaDialog"
      onClose={[Function]}
      onValidate={[Function]}
    >
      <Dialog
        actions={
          Object {
            "begin": Array [],
            "end": Array [
              <Button
                caption="OK"
                disabled={false}
                id="ok"
                onClick={[Function]}
              />,
              <Button
                caption="Cancel"
                id="cancel"
                onClick={[Function]}
              />,
            ],
          }
        }
        caption={
          <y>
            <Icon
              disabled={false}
              src={388}
            />
            <Label />
          </y>
        }
        className="msg valueEditDialog"
        container={Object {}}
        content={
          <Grid
            columnGap={16}
            columns={8}
            rowGap={16}
          />
        }
        id="mrsSchemaDialog"
        onClose={[Function]}
      >
        <Portal
          container={Object {}}
          id="mrsSchemaDialog"
          onClose={[Function]}
          onOpen={[Function]}
        />
      </Dialog>
    </ValueEditDialog>
  </MrsSchemaDialog>
</DialogHost>
`;
